--- a/config.yml
+++ b/config.yml
@@ -3,6 +3,8 @@
 # in which case you will get a parsing error in Prometheus
 # https://curl.haxx.se/libcurl/c/curl_easy_getinfo.html (skip the CURLINFO_ part)
 curl_attributes:
+- proxy_error
+- http_connectcode
 - namelookup_time
 - connect_time
 - starttransfer_time
@@ -40,3 +42,5 @@ curl_settings:
   timeout: 10               # second timeout for curl functions
   ipresolve: ipresolve_v4   # use ipv4? this maps to CURL_IPRESOLVE_V4
   useragent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36
+  #proxy: "http://x.x.x.x:8888"  # http proxy ip
+  #proxyuserpwd: "user:password" # http proxy auth
